--- a/force-app/main/default/classes/CPQDepositCSVPayloadParser.cls
+++ b/force-app/main/default/classes/CPQDepositCSVPayloadParser.cls
@@ -11,7 +11,7 @@ public class CPQDepositCSVPayloadParser {
 
         splitPayloads(allPayloadsToParse); 
         parseAll_CAL(CAL_payloads);
-        parseAll_DAL(DAL_payloads);
+        //parseAll_DAL(DAL_payloads);
 
         //return all deposits to insert, til then.. insert list here
         
@@ -40,22 +40,14 @@ public class CPQDepositCSVPayloadParser {
     @TestVisible private void parseAll_CAL(List<Payload__c> payloadsToParse){ 
         for (Payload__c currPayload: payloadsToParse){
             if (String.isNotBlank(currPayload.Payload__c)){
-                List<Deposit__c> CAL_deposits = parseCsvCAL(currPayload);
-                    finalDepositList.addAll(NA_CAMT052_deposits);
+                List<Deposit__c> CAL_deposits = parseCSV(currPayload);
+                    finalDepositList.addAll(CAL_deposits);
             }
         } 
     }
 
 
-    //this will refactor to its own class, & have its own interface
-    @TestVisible private void parsePatternCAL(Payload__c payloadToParse){
-        //split string by '/n'
-        //discard header columns (top 3 are header columns)
-        //loop through list of newly split strings.. each individual string is a row (or deposit record)
-            //set values, create deposit
-            //do not parse "correspondence"
-            //stop at end
-    }
+    
     
 
 
