Clear cache before processing starts

--- a/force-app/main/default/anonymousApex.cls
+++ b/force-app/main/default/anonymousApex.cls
@@ -9,18 +9,32 @@ public with sharing class anonymousApex {
     //done
 
 
-
-
     /*
     Id jobID = System.enqueueJob(new CPQParseXMLQueueable());
     System.debug ('\n Here is the job id ' + jobID);
     //done
     */
 
+
+    //direct cal parser
+    Payload__c CALpayload = [SELECT Id, Name, Payload__c FROM Payload__c WHERE Name LIKE '%CAL-310390_20200413111931.zip%' LIMIT 1];
+    CPQCalCSVParser calParser = new CPQCalCSVParser();
+    CalParser.parseCalPatternCSVString(CALpayload);
+
+    //direct dal parser
     Payload__c DALpayload = [SELECT Id, Name, Payload__c FROM Payload__c WHERE Name LIKE '%DAL__841808_IMG_20200413150632%' LIMIT 1];
-    CPQCSVParser parser = new CPQCSVParser();
-    parser.parseCSV(DALpayload);
-    //done
+    CPQDalCSVParser dalParser = new CPQDalCSVParser();
+    dalParser.parseDalPatternCSVString(DALpayload);
+    
+
+    //parseDALvia main class
+    Payload__c DALpayload = [SELECT Id, Name, Payload__c FROM Payload__c WHERE Name LIKE '%DAL__841808_IMG_20200413150632%' LIMIT 1];
+    List<Payload__c> payloadsToParse = new List<Payload__c>();
+    payloadsToParse.add(DALpayload);
+    CPQDepositCSVPayloadParser csvParser = new CPQDepositCSVPayloadParser();
+    csvParser.parseCSVtoDeposits(payloadsToParse);
+
+
 
     
 }
