--- a/force-app/main/default/classes/CPQCalCSVParser.cls
+++ b/force-app/main/default/classes/CPQCalCSVParser.cls
@@ -1,8 +1,9 @@
+//refactor and create interface
 public class CPQCalCSVParser 
                     implements CPQICSVParser{
 
     @TestVisible private String delim = ',';
-    @TestVisible private String[] csv;
+    @TestVisible private String[] csv = new List<String>();
     @TestVisible private List<Deposit__c> finalDepositList = new List<Deposit__c>();
     @TestVisible private Deposit__c currDeposit = new Deposit__c();
     private static final Integer CAL_importDateRow = 7;
@@ -19,11 +20,13 @@ public class CPQCalCSVParser
 
 
     public List<Deposit__c> parsePayloadCSVString(Payload__c payloadToParse){
-        
+        //0
         finalDepositList.clear();
+        csv.clear();
 
         //1 split string by '\n'
         this.csv = payloadToParse.Payload__c.toLowerCase().split('\n');
+      
         //2 clear null rows & correspondence rows from csv
         for(Integer rowCount = 0; rowCount < csv.size() ; rowCount++){
             String rowString = csv.get(rowCount);
@@ -32,21 +35,24 @@ public class CPQCalCSVParser
                 rowCount--;
             } 
         }
+        
         //3 discard header columns (top 3 are header columns)
         for (integer removeCount = 0; removeCount < 3; removeCount++){
             csv.remove(0);
         }
+        
         //4 parse each individual row into a deposit
         for(String rowString: csv){
             Deposit__c d = convertCALrowToDeposit(rowString, payloadToParse.Name);
             finalDepositList.add(d);
         }
+
         //5 return deposit list to main class
         return finalDepositList.deepClone();
     }
 
 
-    private Deposit__c convertCALrowToDeposit(String rowString, String payloadName){
+    @TestVisible private Deposit__c convertCALrowToDeposit(String rowString, String payloadName){
         List<String> row = rowString.split(delim);
         currDeposit.clear();
 
